# rules_rust

docs/: flatten.md  rust_repositories.md
examples/musl_cross_compiling/src/: main.rs
rust/: defs.bzl
rust/private/: rustc.bzl  rustdoc.bzl
util/: BUILD.bazel
util/capture_args/: BUILD.bazel  capture_args.rs
util/run_scripts/: BUILD.bazel  run_scripts.rs
