sh_binary(
    name = "fetch_shas",
    srcs = ["fetch_shas.sh"],
    tags = ["manual"],
)

alias(
    name = "collect_coverage",
    actual = "//util/collect_coverage",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "dump_args",
    srcs = ["dump_args.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "run_all",
    srcs = ["run_all.sh"],
    visibility = ["//visibility:public"],
)
